variables.RunFour.scala.error
Compilation error:
RunFour:4: error: '(' expected but identifier found.
  if isOverBaggle() compteur +=1 
     ^RunFour:5: error: illegal start of simple expression
} 
^