variables.RunFour.scala.code
var compteur = 0 
while (compteur != 4) {
  forward ; 
  if isOverBaggle() compteur +=1 
}